# cosmic-osk

./: .gitignore  Cargo.toml  justfile
debian/: changelog  control  copyright  rules
examples/: key.rs
src/: config.rs  layout.rs  lib.rs  main.rs  wayland.rs
